Bug 508996 - "Open KDE Wallet Settings" button not functional after turning auto login on
Summary: "Open KDE Wallet Settings" button not functional after turning auto login on
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 6.4.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2025-09-01 09:58 UTC by tramonti.luca18
Modified: 2025-10-09 22:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
A screenshot of the SDDM behavior settings within the SDDM kcm, showing the checked Automatically log in box and that the warning with the non-functional button (65.51 KB, image/png)
2025-09-01 09:58 UTC, tramonti.luca18
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tramonti.luca18 2025-09-01 09:58:30 UTC
Created attachment 184621 [details]
A screenshot of the SDDM behavior settings within the SDDM kcm, showing the checked Automatically log in box and that the warning with the non-functional button

SUMMARY
The "Open KDE Wallet Settings" button that appears when checking "Automatically log in" under behavior is non-functional and doesn't bring you to the proper page

STEPS TO REPRODUCE
1. Open system settings
2. Go to Colours & Themes -> Login Screen (SDDM)
3. Click on "Behavior"
4. Check "Automatically log in"
5. Click "Open KDE Wallet Settings" on the newly-appeared warning about KDE Wallet

OBSERVED RESULT
KDE Wallet Settings do not open

EXPECTED RESULT
System settings either brings you to the KDE Wallet Settings page or opens the standalone window

SOFTWARE/OS VERSIONS
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora Linux 42 (Kinoite) (Kernel Version: 6.13.3-200.fc42.x86_64 (64 bit))
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Comment 1 David Redondo 2025-09-04 06:47:51 UTC
Uses old kwallet things with the 5 postifx, needs updating to the new name (without any number)

https://invent.kde.org/plasma/sddm-kcm/-/blob/master/src/sddmkcm.cpp?ref_type=heads#L357
Comment 2 David Redondo 2025-09-04 11:42:29 UTC
The executable is stil called kwalletmanager5 but the desktop file is different.
Comment 3 Nate Graham 2025-09-25 17:36:33 UTC
Would you like to fix this, Luca? It's a very simple change.
Comment 4 tramonti.luca18 2025-09-25 17:57:48 UTC
(In reply to Nate Graham from comment #3)
> Would you like to fix this, Luca? It's a very simple change.

Sure, I am so excited to make my first contribution to this project, I'll read the get involved documentation to get everything set up on my machine as soon as I have time
Comment 5 Nate Graham 2025-09-26 14:48:20 UTC
That's great! Let me know if you need any help.
Comment 6 Bug Janitor Service 2025-10-09 11:31:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/97
Comment 7 David Edmundson 2025-10-09 14:14:16 UTC
Git commit cbe7b9ee8468dc47c4215f3eac29478b55c6018c by David Edmundson.
Committed on 09/10/2025 at 11:31.
Pushed by davidedmundson into branch 'master'.

Update to renamed kwalletmanager desktop file

M  +1    -1    src/sddmkcm.cpp

https://invent.kde.org/plasma/sddm-kcm/-/commit/cbe7b9ee8468dc47c4215f3eac29478b55c6018c
Comment 8 David Edmundson 2025-10-09 18:25:40 UTC
Git commit 591f2c1b60cba2f23914d6825b746bed54345acc by David Edmundson.
Committed on 09/10/2025 at 16:11.
Pushed by davidedmundson into branch 'Plasma/6.5'.

Update to renamed kwalletmanager desktop file


(cherry picked from commit cbe7b9ee8468dc47c4215f3eac29478b55c6018c)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +1    -1    src/sddmkcm.cpp

https://invent.kde.org/plasma/sddm-kcm/-/commit/591f2c1b60cba2f23914d6825b746bed54345acc
Comment 9 tramonti.luca18 2025-10-09 19:20:21 UTC
I apologize for ending up not working on this as I have been extremely busy but this has stayed in the back of my mind the whole time
Comment 10 Nate Graham 2025-10-09 22:05:38 UTC
No worries! It's fixed now; that's what matters most.