Update to renamed kwalletmanager desktop file

BUG: 508996


(cherry picked from commit cbe7b9ee8468dc47c4215f3eac29478b55c6018c)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>