src/sddmkcm.cpp
@@ -356,7 +356,7 @@ bool SddmKcm::KDEWalletAvailable()
 
 void SddmKcm::openKDEWallet()
 {
-    KService::Ptr kwalletmanagerService = KService::serviceByDesktopName(QStringLiteral("org.kde.kwalletmanager5"));
+    KService::Ptr kwalletmanagerService = KService::serviceByDesktopName(QStringLiteral("org.kde.kwalletmanager"));
     auto *job = new KIO::ApplicationLauncherJob(kwalletmanagerService);
     job->start();
 }
